k8s/MLFlow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-dev
spec:
  selector:
    matchLabels:
      app: mlflow
  replicas: 1
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: test:latest
          command: 
            - "/bin/sh"
            - "-c"
            - |
              mlflow server --backend-store-uri mysql+pymysql://manish:mle@mysql-svc:3306/mlflowdb --default-artifact-root s3://mlflow/ --app-name basic-auth -h 0.0.0.0
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: mlflow-svc-dev
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress-dev
  annotations:
    kubernetes.io/ingress.class: "nginx-internal-noauth"
spec:
  rules:
    - host: mlflow-dev.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mlflow-svc-dev
              port:
                number: 5000
