k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 8
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minio
      annotations: 
        app_version: "v1.0"
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        args: ["server", "/data", "--console-address", "0.0.0.0:8080", "--address", "0.0.0.0:80"]
        volumeMounts:
        - mountPath: /data
          name: minio-pvc 
      volumes:
      - name: minio-pvc
        persistentVolumeClaim:
          claimName: minio-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc-console
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
 
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc-api
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress-console
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
    - host: minioconsole.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio-svc-console
              port:
                number: 8080
   
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
    - host: minioapi.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio-svc-api
              port:
                number: 80
