k8s/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-dev
spec:
  selector:
    matchLabels:
      app: mlflow
  replicas: 1
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: test:latest
          command: 
            - "/bin/sh"
            - "-c"
            - |
              mlflow server --backend-store-uri mysql+pymysql://$MYSQL_DB_USER:$MYSQL_DB_PASSWORD@$MYSQL_DB_HOST:$MYSQL_DB_PORT/$MYSQL_DB_NAME --default-artifact-root s3://mlflow/ --app-name basic-auth -h 0.0.0.0
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: mlflow-svc
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
    - host: mlflow.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mlflow-svc
              port:
                number: 5000
